# Document-Intelligence-Refinery

./: .env  README.md  app.py  config.py  env.example  extraction_rules.yaml  gitignore  pyproject.toml  run_phase0.py
.refinery/: cbe_annual_report_2023-24.json  extraction_ledger.jsonl  fta_performance_survey_final_report_2022.json
.refinery/chunks/: mcf.jsonl
.refinery/facttable/: facts.db
.refinery/pageindex/: mcf.json
.refinery/profiles/: audit_report_-_2023.json  cbe_annual_report_2023-24.json  extraction_ledger.jsonl  mcf.json  tax_expenditure_ethiopia_2021_22.json
.refinery/vectorstore/: tfidf.db
rubric/: extraction_rules.yaml
src/agents/: audit_mode.py  chunk_validator.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  pageindex.py  provenance.py  routing.py
src/storage/: fact_table.py  vector_store.py
src/strategies/: base.py  strategy_a.py  strategy_b.py  strategy_c.py
tests/: test_router.py  test_triage.py
