[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Document-Intelligence-Refinery"
version = "0.1.0"
description = "A multi-stage agentic pipeline for enterprise document extraction"
requires-python = ">=3.10"

dependencies = [
    # Document parsing — Strategy A (fast text)
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",

    # Document parsing — Strategy B (layout-aware)
    "docling>=2.0.0",

    # Data validation & schemas
    "pydantic>=2.7.0",

    # LLM orchestration
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",   # OpenRouter is OpenAI-compatible

    # Vector store
    "chromadb>=0.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.7.0",           # token counting
    "Pillow>=10.0.0",            # image handling for Strategy C
    "httpx>=0.27.0",             # async HTTP for OpenRouter calls

    # Structured data
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/Document-Intelligence-Refinery"]